--- a/style.css
+++ b/style.css
@@ -1,552 +1,85 @@
-* {
-  margin: 0;
-  padding: 0;
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-main {
-  position: relative;
-  width: 70%;
-  left: 70%;
-  transform: translateX(-50%);
-  margin: 35px 0;
-  display: grid;
-  grid-template-columns: 465px 320px;
+table {
+  width: 18rem;
+  background-color: rgb(2, 29, 20);
+  color: rgb(251, 251, 251);
+  margin: auto;
+  border-spacing: 1rem;
+  border-radius: 0 0 1.5rem 1.5rem;
 }
-
-#checkout-title {
-  font-family: Mon, Arial, Helvetica, sans-serif;
-  text-align: center;
-  margin: 15px 0;
-}
-
-main form {
-  margin-right: 150px;
-  position: relative;
-  width: 80%;
-}
-
-.data-form {
-  font-family: Mon;
-  position: relative;
-  display: block;
-}
-
-.data-form h1 {
-  font-size: 18px;
-  color: #333;
-  margin: 15px 0;
-}
-
-.data-form .campo {
-  margin: 10px 0;
-}
-
-.data-form .campo label {
-  font-size: 12px;
-  color: #4f4f4f;
-  margin: 10px 0;
-  position: relative;
-  display: block;
-}
-
-.data-form .campo .input-field {
-  position: relative;
-}
-
-.data-form .campo .input-field input {
-  border: 1px solid #828282;
-  padding: 8px 5px 8px 35px;
-  color: #828282;
-  font-size: 14px;
-  border-radius: 5px;
-  width: 100%;
-}
-
-.data-form .campo .input-field i {
-  position: absolute;
-  color: #828282;
-  font-size: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 3%;
-}
-
-#shipping-address {
-  margin-top: 50px;
-}
-
-#country-field {
-  display: inline-block;
-  margin-right: 2%;
-}
-
-#postal-code-field {
-  display: inline-block;
-  width: auto;
-}
-
-#country-field div select {
-  border: none;
-  padding: 8px 5px 8px 35px;
-  border-radius: 5px;
-  border: 1px solid #828282;
-}
-
-#user-reminder {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-#user-reminder ~ label {
-  display: inline-block;
-  margin-top: -10px !important;
-}
-
-#btn-submit {
+td {
   width: 20%;
-  padding: 14px 0;
-  border-radius: 10px;
-  background-color: #f2994a;
-  color: #fff;
-  font-weight: 600;
+  height: 3rem;
+  background-color: rgb(49, 49, 48);
   text-align: center;
-  border: none;
-  position: absolute;
-  right: 0;
-  margin-right: -50px;
-}
-
-#products-preview {
-  position: relative;
-}
-
-#product-painel {
-  position: absolute;
-  width: 100%;
-  border-radius: 10px;
-  background-color: #eeeeee;
-  padding: 10px 20px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#product-painel .product {
-  position: relative;
-  width: 100%;
-  display: flex;
-  margin: 10px 0;
-}
-
-.product img {
-  width: 40%;
-  border-radius: 10px;
-  margin-right: 20px;
-}
-
-.product-info {
-  font-family: Mon, Arial, Helvetica, sans-serif;
-  width: 100%;
-}
-
-.product-info h2 {
-  font-size: 16px;
-  color: #4e5150;
-  margin: 5px 0;
-}
-
-.product-info p {
-  font-size: 12px;
-  color: #4e5150;
-  margin: 5px 0;
-}
-
-.product-info p strong {
-  color: #f2994a;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-.quantity-controller {
-  border-radius: 5px;
-  border: 1px solid rgb(136, 136, 136);
-  display: flex;
-  justify-content: space-around;
-  width: 50%;
-  margin-top: 25px;
-}
-
-.quantity-controller button,
-p {
-  position: relative;
-  display: block;
-}
-
-.quantity-controller p {
-  line-height: 24px;
-}
-
-.quantity-controller button {
-  margin: 5px 0;
-  border: 0;
-  background-color: #e0e0e0;
-  border-radius: 5px;
-  padding: 5px;
-  text-align: center;
-}
-
-.quantity-controller button i {
-  font-size: 12px;
-}
-
-.buy-detail {
-  margin: 5px 0;
-  border-top: 1px solid #bdbdbd;
-  display: flex;
-  position: relative;
-  width: 100%;
-  font-family: Mon, Arial, Helvetica, sans-serif;
-}
-
-.buy-detail p {
-  display: block;
-  width: 50%;
-}
-
-.buy-detail p:nth-child(2) {
-  text-align: right;
-}
-
-#shipping {
-  margin-top: 50px;
-}
-
-.line-through {
-  text-decoration: line-through;
-}
-
-span {
   cursor: pointer;
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 50%;
 }
-i {
-  border-radius: 5px;
-  border: 1px solid gray;
-  background-color: rgb(223, 221, 221);
-  /* padding: 12px; */
-  padding: 5px 10px 10px 5px;
-  margin: 10px 3px 3px 3px;
-  height: 10px;
-  width: 10px;
+.selector {
+  color: black;
+  background-color: rgb(243, 241, 241);
 }
-.quantity-controller p {
-  padding: 8px;
-  font-size: 18px;
-  font-weight: bold;
+.operationButtons,
+#gleich {
+  background-color: rgb(250, 163, 2);
 }
-
-@media only screen and (max-width: 1450px) {
-  main {
-    position: relative;
+#zero {
+  border-radius: 4rem;
+}
+td:hover {
+  color: black;
+  background-color: rgb(120, 119, 118);
+  transition: ease-in-out 0.3s;
+  border-radius: 50%;
+}
+#zero:hover {
+  border-radius: 4rem;
+}
+#resultArea {
+  height: 25%;
+  background-color: rgb(19, 18, 18);
+  width: 18rem;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+  text-align: end;
+  padding: 1rem;
+  margin: auto;
+  border-radius: 1.5rem 1.5rem 0 0;
+}
+#previousArea {
+  background-color: rgb(41, 40, 40);
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  border-radius: 1rem 1rem 0 0;
+  height: 6vh;
+}
+#currentArea {
+  background-color: rgb(41, 40, 40);
+  height: 6vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-size: 2rem;
+}
+@media only screen and (max-width: 600px) {
+  table {
     width: 70%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 35px 0;
-    display: grid;
-    grid-template-columns: 465px 320px;
+    height: 60vh;
+    font-size: 1rem;
   }
-
-  #checkout-title {
-    font-family: Mon, Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin: 15px 0;
+  #resultArea {
+    font-size: 1rem;
+    width: 70%;
+    height: 20vh;
   }
-
-  main form {
-    margin-right: 150px;
-    position: relative;
-    width: 80%;
-  }
-
-  .data-form {
-    font-family: Mon;
-    position: relative;
-    display: block;
-  }
-
-  .data-form h1 {
-    font-size: 18px;
-    color: #333;
-    margin: 15px 0;
-  }
-
-  .data-form .campo {
-    margin: 10px 0;
-  }
-
-  .data-form .campo label {
-    font-size: 12px;
-    color: #4f4f4f;
-    margin: 10px 0;
-    position: relative;
-    display: block;
-  }
-
-  .data-form .campo .input-field {
-    position: relative;
-  }
-
-  .data-form .campo .input-field input {
-    border: 1px solid #828282;
-    padding: 8px 5px 8px 35px;
-    color: #828282;
-    font-size: 14px;
-    border-radius: 5px;
-    width: 100%;
-  }
-
-  .data-form .campo .input-field i {
-    position: absolute;
-    color: #828282;
-    font-size: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 3%;
-  }
-
-  #shipping-address {
-    margin-top: 50px;
-  }
-
-  #country-field {
-    display: inline-block;
-    margin-right: 2%;
-  }
-
-  #postal-code-field {
-    display: inline-block;
-    width: auto;
-  }
-
-  #country-field div select {
-    border: none;
-    padding: 8px 5px 8px 35px;
-    border-radius: 5px;
-    border: 1px solid #828282;
-  }
-
-  #user-reminder {
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-  #user-reminder ~ label {
-    display: inline-block;
-    margin-top: -10px !important;
-  }
-
-  #btn-submit {
-    width: 20%;
-    padding: 14px 0;
-    border-radius: 10px;
-    background-color: #f2994a;
-    color: #fff;
-    font-weight: 600;
-    text-align: center;
-    border: none;
-    position: absolute;
-    right: 0;
-    margin-right: -50px;
-  }
-
-  #products-preview {
-    position: relative;
-  }
-
-  #product-painel {
-    position: absolute;
-    width: 100%;
-    border-radius: 10px;
-    background-color: #eeeeee;
-    padding: 10px 20px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  #product-painel .product {
-    position: relative;
-    width: 100%;
-    display: flex;
-    margin: 10px 0;
-  }
-
-  .product img {
-    width: 30%;
-    border-radius: 10px;
-    margin-right: 20px;
-  }
-
-  .product-info {
-    font-family: Mon, Arial, Helvetica, sans-serif;
-    width: 100%;
-  }
-
-  .product-info h2 {
-    font-size: 16px;
-    color: #4e5150;
-    margin: 5px 0;
-  }
-
-  .product-info p {
-    font-size: 12px;
-    color: #4e5150;
-    margin: 5px 0;
-  }
-
-  .product-info p strong {
-    color: #f2994a;
-    font-size: 16px;
-    font-weight: 600;
-  }
-
-  .quantity-controller {
-    border-radius: 5px;
-    border: 1px solid rgb(136, 136, 136);
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-    margin-top: 25px;
-  }
-
-  .quantity-controller button,
-  p {
-    position: relative;
-    display: block;
-  }
-
-  .quantity-controller p {
-    line-height: 24px;
-  }
-
-  .quantity-controller button {
-    margin: 5px 0;
-    border: 0;
-    background-color: #e0e0e0;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-  }
-
-  .quantity-controller button i {
-    font-size: 12px;
-  }
-
-  .buy-detail {
-    margin: 5px 0;
-    border-top: 1px solid #bdbdbd;
-    display: flex;
-    position: relative;
-    width: 90%;
-    font-family: Mon, Arial, Helvetica, sans-serif;
-  }
-
-  .buy-detail p {
-    display: block;
-    width: 50%;
-  }
-
-  .buy-detail p:nth-child(2) {
-    text-align: right;
-  }
-
-  #shipping {
-    margin-top: 50px;
-  }
-
-  .line-through {
-    text-decoration: line-through;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  main {
-    grid-template-columns: 100%;
-    width: 90%;
-    grid-template-rows: 400px 1fr;
-    grid-template-areas: "top" "bottom";
-  }
-
-  main form {
-    width: 85% !important;
-    left: 0;
-    transform: unset;
-    margin-right: 0 !important;
-  }
-
-  form {
-    grid-area: bottom;
-  }
-
-  #products-preview {
-    width: 100%;
-    grid-area: top;
-  }
-
-  #product-painel {
-    padding: 0;
-  }
-
-  #btn-submit {
-    width: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  #postal-code-field {
-    width: 100%;
-  }
-
-  .product {
-    padding: 0 15px;
-  }
-
-  .buy-detail {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-.remove-product {
-  border: 0;
-  padding: 4px 8px;
-  margin: 5px;
-  background-color: #c66;
-  color: #fff;
-  font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium";
-  font-size: 12px;
-  border-radius: 3px;
-}
-
-.remove-product:hover {
-  background-color: #a44;
-}
-
-.product-price strong::before {
-  content: "$";
-}
-
-.line-through::before {
-  content: "$";
-}
-
-.buy-detail p:nth-child(2):before {
-  content: "$";
-}
-
-.product-line-price {
-  float: left;
-  clear: left;
-  width: auto;
-  margin-top: 10px;
-}
-
-.product-line-price:before {
-  content: "Product Total: $";
 }
